<resources>
    <string name="app_name" translatable="false">groupfinder</string>
    <string name="password_hint">Password</string>
    <string name="groupfinderLogo" translatable="false">GroupFinder</string>
    <string name="loginHeadline">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_btn_text">SIGN UP</string>
    <string name="sign_up_text">Sign up</string>
    <string name="forename_hint">Forename</string>
    <string name="lastname_hint">Lastname</string>
    <string name="email_hint">E-mail</string>

    <string name="phonenumber_hint">Phonenumber</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_login">Back to login</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="calendar">Calendar</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="course_code">Course code: </string>
    <string name="location">Location:</string>
    <string name="details">Details:</string>
    <string name="group_members">Group members:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="group">group</string>
    <string name="description">Description:</string>
    <string name="group_memebers">Group memebers</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="group_finder" translatable="false">Group Finder</string>
    <string name="search_for_groups_hint">Search for groups..</string>
    <string name="select_a_date">Select a date</string>
    <string name="start_time">Start time:</string>
    <string name="select">Select</string>
    <string name="end_time">End Time:</string>
    <string name="room_number">Room number:</string>
    <string name="room_reservation">Room reservation</string>
    <string name="select_date">select date</string>
    <string name="groupwsemi">Group:</string>
    <string name="reserve">Reserve</string>
    <string name="my_groups">My Groups</string>
    <string name="create_new_group">Create new group</string>
    <string name="create">Create</string>
    <string name="create_a_group">Create a group</string>
    <string name="date">Date:</string>
    <string name="new_reservation">New reservation</string>
    <string name="about_this_group">About this group</string>
    <string name="choose_group">Choose group</string>
    <string name="at" translatable="false">\"@\"</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="room">Room:</string>
    <string name="select_date_start_end_time_room_number_and_group">Select date, start/end time, room number and group</string>
    <string name="round_button_with_arrow_to_the_right">Round button with arrow to the right</string>
    <string name="my_reservations">My Reservations</string>
    <string name="connection_error_image">Connection error image</string>
    <string name="reservations_info">Reservations info</string>
    <string name="reservation_info_text">Displays all your upcoming reservations.\n If you\'re a groupleader, you can create new reservations by clicking the \'new reservation\' button.</string>
    <string name="find_your_group">Find your group!</string>
    <string name="this_page_let_s_you_search_for_a_group_nuse_the_search_field_and_select_a_group">This page let\'s you search for a group.  Use the search field and select a group.</string>
    <string name="missing_info_fn">Missing forename!</string>
    <string name="missing_info_sn">Missing surname!</string>
    <string name="missing_info_email">Missing Email!</string>
    <string name="missing_info_phone">Missing phone!</string>
    <string name="missing_info_pw">Missing password!</string>
    <string name="missing_info_groupname">Missing group name!</string>
    <string name="missing_info_coursecode">Missing course code!</string>
    <string name="missing_info_location">Missing location!</string>
    <string name="missing_info_description">Missing description!</string>
    <string name="missing_info_date">Missing date</string>
    <string name="missing_info_time">Missing start time</string>
    <string name="missing_info_endtime">Missing end time</string>
    <string name="missing_info_room">Missing room</string>
    <string name="missing_info_group">Missing group</string>
    <string name="missing_info_start_end_date">Choose Date/Start-/End-time</string>
    <string name="snackbar_start_time">Set start time</string>
    <string name="snackbar_select_date">Choose a date</string>
    <string name="room_reservations">Room reservations</string>


</resources>