<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/myReservationFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/room_reservation" />

    <item
        android:id="@+id/groupsFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/group_finder"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />

    <item
        android:id="@+id/logoutFragment"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        />


    <!-- FIXME: Register / login / DB er her for testing.. -->
    <item
        android:id="@+id/signUpFragment"
        android:title="Register"
        />

    <item
        android:id="@+id/loginFragment"
        android:title="Login"
        />

    <item
        android:id="@+id/databaseFragment"
        android:title="DB test data"
        />


    <item
        android:id="@+id/groupFragment"
        android:title="@string/group"/>


</menu>