<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment"
    android:id="@+id/login_fragment"
    >


    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/groupfinderLogo"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/loginHeadline"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
        app:layout_constraintEnd_toEndOf="@+id/logoText"
        app:layout_constraintStart_toStartOf="@+id/logoText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEmail"
        android:layout_width="@dimen/edit_text_width_large"
        android:layout_height="@dimen/edit_text_height_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPassword"
        android:layout_width="@dimen/edit_text_width_large"
        android:layout_height="@dimen/edit_text_height_large"
        android:layout_marginBottom="@dimen/spacing_login"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmail" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_arrow_forward" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="48dp"
        android:text="@string/no_account_text"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/design_default_color_primary_variant"
        android:text="@string/sign_up_btn_text"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>