<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpFragment">


    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:fontFamily="@font/roboto"
        android:text="@string/groupfinderLogo"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"

        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="@+id/logoText"
        app:layout_constraintStart_toStartOf="@+id/logoText"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/forenameInput"
        android:layout_width="@dimen/edit_text_width_medium"
        android:layout_height="@dimen/edit_text_height_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/forename_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastnameInput"
        android:layout_width="@dimen/edit_text_width_medium"
        android:layout_height="@dimen/edit_text_height_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/lastname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInput"
        android:layout_width="@dimen/edit_text_width_medium"
        android:layout_height="@dimen/edit_text_height_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/forenameInput"
        app:layout_constraintStart_toStartOf="@+id/forenameInput"
        app:layout_constraintTop_toBottomOf="@+id/forenameInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneInput"
        android:layout_width="@dimen/edit_text_width_medium"
        android:layout_height="@dimen/edit_text_height_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/phonenumber_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/lastnameInput"
        app:layout_constraintStart_toStartOf="@+id/lastnameInput"
        app:layout_constraintTop_toBottomOf="@+id/lastnameInput" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordInput"
        android:layout_width="@dimen/edit_text_width_medium"
        android:layout_height="@dimen/edit_text_height_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/phoneInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/phoneInput"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        app:layout_constraintVertical_bias="0.058" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="104dp"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/materialButton"
        app:srcCompat="@drawable/ic_arrow_forward" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"


        android:text="Already have an account?"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/design_default_color_primary_variant"
        android:text="Back to login"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>