<?xml version="1.0" encoding="utf-8"?>
<!--
    Layout for reservasjons fragment.
    Inneholder Datepicker og knapper for å åpne dialogene der man velger
    start-/slutt-tid, rom og gruppe.
    Binder data med ReservationViewModelShared
 -->
<!-- Anders Olai Pedersen - 225280 -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="vms"
            type="com.example.groupfinder.calendar.ReservationViewModelShared" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:id="@+id/group_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor"
            android:paddingTop="@dimen/spacing_medium"
            android:text="@string/room_reservation"
            android:textAlignment="center"
            android:textColor="@color/secondaryLightColor"
            android:textSize="@dimen/font_xl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            app:cardCornerRadius="0dp"
            app:contentPadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/group_header"
            app:layout_constraintTop_toBottomOf="@id/group_header"

            app:strokeColor="@android:color/white"
            app:strokeWidth="1dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/CustomOverlineLarge"

                    android:text="@string/new_reservation"
                    />




                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/my_reservation_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:textAppearance="@style/CustomTextGroupInfo"

                    android:text="@string/select_date_start_end_time_room_number_and_group"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <ScrollView
            android:id="@+id/scroll_view"
            android:paddingTop="240dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"


            app:layout_constraintLeft_toLeftOf="@id/card_group_info"
            app:layout_constraintRight_toRightOf="@id/card_group_info"
            app:layout_constraintTop_toBottomOf="@+id/card_group_info"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_scroll"


                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/spacing_xxl"

                    android:layout_marginEnd="@dimen/spacing_xxl"

                    android:text="@string/select_date"
                    app:icon="@drawable/ic_calendar"


                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/start_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/start_time"
                    android:textSize="@dimen/font_medium"


                    app:layout_constraintBottom_toBottomOf="@+id/start_time_input"
                    app:layout_constraintEnd_toStartOf="@+id/start_time_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/start_time_input" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_time_input"
                    style="@style/RoomReservationButtons"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"


                    app:layout_constraintEnd_toEndOf="@+id/date_input"
                    app:layout_constraintTop_toBottomOf="@+id/date_input"

                    />


                <TextView
                    android:id="@+id/end_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/spacing_xl"
                    android:text="@string/end_time"

                    android:textSize="@dimen/font_medium"


                    app:layout_constraintEnd_toEndOf="@+id/start_time_text"
                    app:layout_constraintStart_toStartOf="@+id/start_time_text"
                    app:layout_constraintTop_toBottomOf="@id/start_time_text" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/end_time_input"
                    style="@style/RoomReservationButtons"

                    app:layout_constraintBottom_toBottomOf="@+id/end_time_text_view"
                    app:layout_constraintEnd_toEndOf="@+id/start_time_input"
                    app:layout_constraintStart_toStartOf="@+id/start_time_input"
                    app:strokeColor="@android:color/transparent" />


                <TextView
                    android:id="@+id/room_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/spacing_xl"

                    android:text="@string/room_number"
                    android:textSize="@dimen/font_medium"

                    app:layout_constraintEnd_toEndOf="@+id/end_time_text_view"
                    app:layout_constraintStart_toStartOf="@+id/end_time_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/end_time_text_view" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/room_number_input"
                    style="@style/RoomReservationButtons"

                    app:layout_constraintBottom_toBottomOf="@+id/room_number_text_view"
                    app:layout_constraintEnd_toEndOf="@+id/end_time_input"
                    app:layout_constraintStart_toStartOf="@+id/end_time_input" />

                <TextView
                    android:id="@+id/group_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xl"

                    android:text="@string/groupwsemi"
                    android:textSize="@dimen/font_medium"

                    app:layout_constraintEnd_toEndOf="@+id/room_number_text_view"
                    app:layout_constraintStart_toStartOf="@+id/room_number_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/room_number_text_view" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/group_input"
                    style="@style/RoomReservationButtons"


                    app:layout_constraintBottom_toBottomOf="@+id/group_text_view"
                    app:layout_constraintStart_toStartOf="@+id/room_number_input" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reserve_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="@dimen/spacing_xxl"
                    android:layout_marginTop="@dimen/spacing_xxl"
                    android:layout_marginEnd="@dimen/spacing_xxl"


                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/reserve"


                    app:layout_constraintEnd_toEndOf="@+id/date_input"
                    app:layout_constraintStart_toStartOf="@+id/date_input"
                    app:layout_constraintTop_toBottomOf="@+id/group_text_view"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>






    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>